src/test/resources/org/nest/nestml/_cocos/valid/memberVariableDefinedMultipleTimes.nestml
neuron NeuronInTest:
  state:
    x mV
    g_z mV
  end

  equations:
    g_z'' = t
  end

  parameters:
    y real
  end

  input:
    z <- spike
  end

  equations:
    function g real = 12
  end
end

