src/test/resources/org/nest/nestml/_cocos/invalid/memberVariableDefinedMultipleTimes.nestml
neuron NeuronInTest:
    state:
        x mV
        g_z mV
        g_ex mV # this error is reported because of the shape g_ex
    end

    equations:
      x mV = 1
      shape g_ex = t # error, g_z is already defined
      g_z'' = t
      g_z'' = t*2 # error, g_z' is defined by the last definition
    end

    parameters:
        x real = x * 2
        y real
    end

    input:
       y <- spike
    end

    equations:
       x real = 12
    end
end

